name:                web-push
version:             0.1.1.0
synopsis:            Send messages using Web Push protocol.
description:         Please see README.md
homepage:            https://github.com/sarthakbagaria/web-push#readme
license:             MIT
license-file:        LICENSE
author:              Sarthak Bagaria
maintainer:          neokits@gmail.com
copyright:           2017 Sarthak Bagaria
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Web.WebPush
                       Web.WebPush.Internal
  ghc-options:        -Wall -fwarn-tabs -O2
  build-depends:       base                          >= 4.7 && < 5
                     , aeson
                     , time
                     , bytestring                    >= 0.9        && < 0.11
                     , base64-bytestring             >= 1.0.0.1    && < 1.1
                     , text                          >= 0.11       && < 2.0
                     , cryptonite                    >= 0.6        && < 0.16
                     , binary                        >= 0.7.5      && < 0.9
                     , memory                        >= 0.13       && < 0.14
                     , random                        >= 1.1        && < 1.2
                     , http-client                   >= 0.4.31     && < 0.5
                     , http-types                    >= 0.8.6      && < 1.0
                     , exceptions                    >= 0.8.3      && < 0.9
                     , transformers                  >= 0.4.2.0    && < 0.5

                     , jose                          >= 0.4.0.2    && < 0.5
                     , unordered-containers

  default-language:    Haskell2010

test-suite web-push-test
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  other-modules:       WebPushEncryptionSpec
  hs-source-dirs:      test
  ghc-options:         -Wall
  build-depends:       base
                     , web-push
                     , hspec                         >= 2.2        && < 2.3
                     , bytestring                    >= 0.9        && < 0.11
                     , base64-bytestring             >= 1.0.0.1    && < 1.1
                     , binary                        >= 0.7.5      && < 0.9

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sarthakbagaria/web-push
