name:                 web-push-example
version:              0.3
synopsis:             Send messages using Web Push protocol.
description:          Please see README.md
homepage:             https://github.com/sarthakbagaria/web-push#readme
license:              MIT
license-file:         LICENSE
author:               Sarthak Bagaria
maintainer:           neokits@gmail.com
copyright:            2017 Sarthak Bagaria
category:             Web
build-type:           Simple
cabal-version:        >=1.10

executable web-push-example
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

  build-depends:       base
                     , web-push                       >= 0.3        && < 0.4
                     , yesod                          >= 1.6        && < 1.7
                     , time
                     , http-conduit                   >= 2.3        && < 2.4
                     , shakespeare                    >= 2.0        && < 2.1
                     , lens                           >= 4.15.1
                     , text                           >= 0.11       && < 2.0
                     , transformers                   >= 0.5.2.0    && < 0.6
                     , aeson                          >= 1.4        && < 1.5

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sarthakbagaria/web-push
